--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="correctAnswer">#4CAF50</color>
+    <color name="incorrectAnswer">#F44336</color>
+
 </resources>
