--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".QuizActivity">
 
 
     <ProgressBar
@@ -25,45 +27,45 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <RadioGroup
+    <LinearLayout
         android:id="@+id/optionsRadioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/questionTextView"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="9dp">
 
-        <RadioButton
-            android:id="@+id/option1RadioButton"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/option1Button"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            />
 
-        <RadioButton
-            android:id="@+id/option2RadioButton"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/option2Button"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            />
 
-        <RadioButton
-            android:id="@+id/option3RadioButton"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/option3Button"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            />
 
-        <RadioButton
-            android:id="@+id/option4RadioButton"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/option4Button"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp" />
-    </RadioGroup>
+            android:textSize="16sp"
+         />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/optionsRadioGroup"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:text="Submit" />
+
 
 </RelativeLayout>
