--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+
+
     <TextView
         android:id="@+id/resultsTextView"
         android:layout_width="wrap_content"
@@ -11,5 +13,35 @@
         android:textSize="24sp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp" />
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/resultsTextView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="51dp"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/retakeQuizButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/resultsTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="22dp"
+            android:text="Retake Quiz" />
+
+        <Button
+            android:id="@+id/finishQuizButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/retakeQuizButton"
+            android:layout_centerHorizontal="true"
+            android:text="Finish Quiz" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
